terraform_files/sg.tf
resource "aws_security_group" "allow_ssh_anywhere_terra2" {
  name        = "${var.project_name}-allow_ssh_anywhere_terra2"
  description = "Allow all inbound traffic to ssh"
  vpc_id      = "${var.vpc_id}"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    cidr_blocks     = ["0.0.0.0/0"]
  }
}


resource "aws_security_group" "allow_http_anywhere_terra2" {
  name        = "${var.project_name}-allow_http_anywhere_terra2"
  description = "Allow all inbound traffic to http"
  vpc_id      = "${var.vpc_id}"

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    cidr_blocks     = ["0.0.0.0/0"]
  }
}
